--- a/public/styles.css
+++ b/public/styles.css
@@ -648,90 +648,38 @@ video {
   background-color: rgba(154, 230, 180, var(--bg-opacity));
 }
 
-.bg-gray-100 {
-  --bg-opacity: 1;
-  background-color: #f7fafc;
-  background-color: rgba(247, 250, 252, var(--bg-opacity));
-}
-
-.bg-blue-500 {
-  --bg-opacity: 1;
-  background-color: #4299e1;
-  background-color: rgba(66, 153, 225, var(--bg-opacity));
-}
-
-.hover\:bg-blue-700:hover {
-  --bg-opacity: 1;
-  background-color: #2b6cb0;
-  background-color: rgba(43, 108, 176, var(--bg-opacity));
-}
-
-.rounded {
-  border-radius: 0.25rem;
+.flex {
+  display: flex;
 }
 
 .table {
   display: table;
 }
 
-.font-bold {
-  font-weight: 700;
+.flex-col {
+  flex-direction: column;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
+.text-xl {
+  font-size: 1.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
-.overflow-x-auto {
-  overflow-x: auto;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-white {
+.text-gray-900 {
   --text-opacity: 1;
-  color: #fff;
-  color: rgba(255, 255, 255, var(--text-opacity));
-}
-
-.text-gray-800 {
-  --text-opacity: 1;
-  color: #2d3748;
-  color: rgba(45, 55, 72, var(--text-opacity));
-}
-
-.text-green-600 {
-  --text-opacity: 1;
-  color: #38a169;
-  color: rgba(56, 161, 105, var(--text-opacity));
+  color: #1a202c;
+  color: rgba(26, 32, 44, var(--text-opacity));
 }
 
 @-webkit-keyframes spin {
